Avoid keeping closed tabs settings (or delete them) in some cases

Avoid keeping closed tabs settings (or delete them) when the limit of
closed tabs is reached, when closing Krusader and when cleaning the
list of closed tabs.

FIXED: [ 447197 ] The size of the krusaderrc file gets too big
BUG: 447197

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/79