krusader/panelmanager.cpp
@@ -405,6 +405,31 @@ void PanelManager::undoCloseTab(const QAction *action)
     });
 }
 
+void PanelManager::delAllClosedTabs()
+{
+    RecentlyClosedTabsMenu *closedTabsMenu = KrActions::actClosedTabsMenu;
+    if (closedTabsMenu) {
+        const int quantActions = closedTabsMenu->menu()->actions().size();
+        // Remove the actions (and related information) that follow those
+        // two items: the "Empty Recently Closed Tabs" one and a separator
+        for (int x = quantActions - 1; x >= 2; x--) {
+            QAction *action = closedTabsMenu->menu()->actions().at(x);
+            delClosedTab(action);
+        }
+    }
+}
+
+void PanelManager::delClosedTab(QAction *action)
+{
+    // Delete the settings of the closed tab.
+    // Note: The code is based on the one of slotCloseTab()
+    QString grpName = QString("closedTab_%1").arg(reinterpret_cast<qulonglong>(action));
+    krConfig->deleteGroup(grpName);
+
+    // Remove the menu entry and the rest of its information
+    KrActions::actClosedTabsMenu->removeAction(action);
+}
+
 void PanelManager::updateTabbarPos()
 {
     KConfigGroup group(krConfig, "Look&Feel");
@@ -470,7 +495,6 @@ void PanelManager::slotNextTab()
     int nextInd = (currTab == _tabbar->count() - 1 ? 0 : currTab + 1);
     _tabbar->setCurrentIndex(nextInd);
 }
-
 
 void PanelManager::slotPreviousTab()
 {
